--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,23 @@
-# package directories
-node_modules
-jspm_packages
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Serverless directories
-.serverless
-.env
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Webpack and distribution directories
-.webpack
-dist
+# testing
+/coverage
 
-# Other
+# production
+/build
+
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
