--- a/package.json
+++ b/package.json
@@ -1,86 +1,43 @@
 {
-  "name": "serverless-react-boilerplate",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "cross-env IS_OFFLINE=1 concurrently --kill-others \"npm run start:devserver\" \"npm run start:offline\"",
-    "start:devserver": "webpack serve --config webpack.browser.config.js --mode development",
-    "start:offline": "sls offline start",
-    "build:serverless": "sls package",
-    "build:browser": "webpack --config webpack.browser.config.js --mode production",
-    "deploy": "sls deploy",
-    "test": "jest"
-  },
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-beta",
-    "core-js": "^3.9.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "regenerator-runtime": "^0.13.7",
-    "source-map-support": "^0.5.19"
+    "react-scripts": "5.0.0",
+    "typescript": "^4.6.2",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-stage-2": "^7.8.3",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/aws-lambda": "^8.10.71",
-    "@types/babel__core": "^7.1.12",
-    "@types/babel__preset-env": "^7.9.1",
-    "@types/babel-core": "^6.25.6",
-    "@types/concurrently": "^6.2.0",
-    "@types/copy-webpack-plugin": "^8.0.0",
-    "@types/core-js": "^2.5.4",
-    "@types/file-loader": "^5.0.0",
-    "@types/jest": "^27.0.2",
-    "@types/mini-css-extract-plugin": "^2.3.0",
-    "@types/prettier": "^2.1.6",
-    "@types/react": "^17.0.9",
-    "@types/react-dom": "^17.0.6",
-    "@types/serverless": "^1.78.20",
-    "@types/source-map-support": "^0.5.3",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^4.3.1",
-    "aws-sdk": "^2.834.0",
-    "babel-jest": "^27.0.2",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "concurrently": "^6.2.0",
-    "copy-webpack-plugin": "^9.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.4.0",
-    "file-loader": "^6.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.4",
-    "jest-module-name-mapper": "^0.1.5",
-    "mini-css-extract-plugin": "^2.4.2",
-    "null-loader": "^4.0.1",
-    "prettier": "^2.2.1",
-    "react-refresh": "^0.10.0",
-    "serverless": "^2.22.0",
-    "serverless-offline": "^8.2.0",
-    "serverless-plugin-scripts": "^1.0.2",
-    "serverless-s3-deploy": "^0.10.0",
-    "serverless-webpack": "^5.3.5",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.1.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-stats-plugin": "^1.0.3"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "prettier": {
-    "printWidth": 120,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": false,
-    "quoteProps": "as-needed",
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "bracketSameLine": false,
-    "arrowParens": "always"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
