--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"deploy": "aws s3 sync build s3://ffhub"  //&& aws cloudfront create-invalidation --distribution-id E3G76GBFZOVVV4 --paths \"/*\" --no-cli-pager"
+    "deploy": "aws s3 sync build s3://ffhub && aws cloudfront create-invalidation --distribution-id E3G76GBFZOVVV4 --paths \"/*\" --no-cli-pager"
   },
   "eslintConfig": {
     "extends": [
