--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-spinners": "^0.13.4",
     "sass": "^1.54.4",
@@ -56,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
