--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
