--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nivo/swarmplot": "^0.99.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -17,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.0",
     "immutability-helper": "^3.1.1",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -57,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/pako": "^2.0.4",
     "react-scripts": "^5.0.1"
   }
 }
